# spindle

./: .gitignore  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  README.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: ci.yml  release.yml
apps/spindle/: README.md  index.html  package.json  tsconfig.json  (+2 more)
apps/spindle/src-tauri/: Cargo.toml  tauri.conf.json
apps/spindle/src-tauri/capabilities/: default.json
apps/spindle/src-tauri/icons/: icon.icns
apps/spindle/src-tauri/src/: lib.rs  main.rs
docs/: Spindle_Menu_System_Spec.md  blu-ray-integration-plan.md  build-step-progress.md  cli-plan.md  core-dvd-authoring-completion.md  dvd-navigation-lab-notes.md  lib-igs-author-plan.md  lib-pgs-author-plan.md  lib-udf-assessment.md  menu-builder-and-authoring-pipeline.md  menu-editor-set-2b-format-scaling.md  menu-editor-set-2b-spec.md  menu-system-implementation-plan.md  menu-workspace-backend-upgrades-plan.md  motion-menus.md  release-workflow-plan.md  rich-menu-editor-plan.md  spindle-persona-map.md  text-subtitle-rendering-plan.md  udftools-fork-execution-plan.md  udftools-fork-plan.md
mockups/: 01-app-shell.html  02-project-overview-bd.html  02-project-overview.html  03-assets.html  04-asset-inspector.html  05-titles-overview-bd.html  05-titles-overview.html  06-title-detail-bd.html  06-title-detail.html  07-stream-mapping-bd.html  07-stream-mapping.html  08-output-profiles.html  09-chapters-bd.html  09-chapters.html  10-menus-overview-bd.html  10-menus-overview.html  11-menu-editor-bd.html  11-menu-editor.html  12-navigation-preview-bd.html  12-navigation-preview.html  13-disc-planner.html  14-build-bd.html  14-build.html  15-build-progress-bd.html  15-build-progress.html  16-logs-diagnostics.html  17-verification.html  18-relink-assets.html  19-settings.html  20-format-selector.html  21-bd-output-profiles.html  22-bd-popup-menu.html  23-bd-planner.html  24-bd-verification.html  25-bd-toolchain.html  README.md  design-system.css  index.html  yuli-menu-concept-1.html  yuli-menu-concept-2.html  (+3 more)
plugins/tauri-plugin-display-awareness/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-display-awareness/guest-js/: index.ts
plugins/tauri-plugin-display-awareness/permissions/: default.toml
plugins/tauri-plugin-display-awareness/permissions/autogenerated/: reference.md
plugins/tauri-plugin-display-awareness/permissions/autogenerated/commands/: get_active_display.toml  get_displays.toml
plugins/tauri-plugin-display-awareness/permissions/schemas/: schema.json
plugins/tauri-plugin-display-awareness/src/: lib.rs
plugins/tauri-plugin-spindle-project/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-spindle-project/guest-js/: index.ts
plugins/tauri-plugin-spindle-project/permissions/: default.toml
plugins/tauri-plugin-spindle-project/permissions/autogenerated/: reference.md
plugins/tauri-plugin-spindle-project/permissions/autogenerated/commands/: auto_generate_menu_nav.toml  cancel_build.toml  check_toolchain.toml  create_project.toml  estimate_disc_capacity.toml  execute_build.toml  export_diagnostics.toml  export_menu_render_preview.toml  extract_image_thumbnail.toml  extract_thumbnail.toml  extract_video_thumbnail.toml  generate_build_plan.toml  get_cache_dir.toml  inspect_asset.toml  list_available_fonts.toml  parse_project.toml  serialise_project.toml  validate_project.toml
plugins/tauri-plugin-spindle-project/permissions/schemas/: schema.json
plugins/tauri-plugin-spindle-project/src/: build.rs  commands.rs  desktop.rs  error.rs  inspect.rs  lib.rs  mobile.rs  models.rs  toolchain.rs
plugins/tauri-plugin-spindle-project/src/models/: asset.rs  build_settings.rs  disc.rs  menu.rs  mod.rs  render_target.rs  title.rs
plugins/tauri-plugin-spindle-project/src/validation/: build_settings.rs  chapter.rs  disc.rs  menu.rs  menu_action.rs  menu_aspect.rs  mod.rs  scene.rs  title.rs  titleset.rs
scripts/: check-release-versions.sh  collect-sidecars.sh  create-sidecar-stubs.sh  install-sidecars.sh  prepare-release-version.sh
tools/: README.md
tools/menu-debug/: Cargo.toml
tools/menu-debug/src/: main.rs
(+167 files in other folders)
