[package]
name = "spindle"
version = "0.3.0"
description = "Spindle desktop authoring shell"
authors = ["Liminal HQ, Scott Morris"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spindle_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Official Tauri v2 plugins
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-shell = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
log = "0.4"

# Dev/debug tooling: the MCP bridge plugin is only registered under
# `#[cfg(debug_assertions)]` in code, so it is compiled in but inert in release.
tauri-plugin-mcp-bridge = "0.11"

# Spindle plugins (workspace)
tauri-plugin-spindle-project = { path = "../../../plugins/tauri-plugin-spindle-project" }
